[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/chest_show_pic.gd" type="Script" id=1]
[ext_resource path="res://textures/chest_pic.png" type="Texture" id=2]
[ext_resource path="res://gui/ShowPicture.tscn" type="PackedScene" id=3]

[sub_resource type="FixedMaterial" id=1]

resource/name = "chest"
flags/visible = true
flags/double_sided = false
flags/invert_faces = false
flags/unshaded = false
flags/on_top = false
flags/lightmap_on_uv2 = true
flags/colarray_is_srgb = true
params/blend_mode = 0
params/depth_draw = 1
params/line_width = 6.72623e-44
fixed_flags/use_alpha = false
fixed_flags/use_color_array = false
fixed_flags/use_point_size = false
fixed_flags/discard_alpha = false
fixed_flags/use_xy_normalmap = false
params/diffuse = Color( 1, 1, 1, 1 )
params/specular = Color( 0, 0, 0, 1 )
params/emission = Color( 0, 0, 0, 1 )
params/specular_exp = 50.0
params/detail_mix = 1.0
params/normal_depth = 1
params/shader = 0
params/shader_param = 0.5
params/glow = 0
params/point_size = 1.0
uv_xform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
textures/diffuse = ExtResource( 2 )
textures/diffuse_tc = 0
textures/detail_tc = 0
textures/specular_tc = 0
textures/emission_tc = 0
textures/specular_exp_tc = 0
textures/glow_tc = 0
textures/normal_tc = 0
textures/shade_param_tc = 0

[sub_resource type="Mesh" id=2]

resource/name = "Cube"
surfaces/0 = {
"alphasort": false,
"arrays": [ Vector3Array( -1.00372, 1.82567, 1, -1.00372, 1.53223, -1, -1.00372, 1.53223, 1, -1.00372, 1.82567, -1, 1.00372, 1.53223, -1, -1.00372, 1.53223, -1, 1.00372, 1.82567, -1, 1.00372, 1.53223, 1, 1.00372, 1.53223, -1, 1.00372, 1.82567, 1, -1.00372, 1.53223, 1, 1.00372, 1.53223, 1, 1.00372, 1.53223, -1, -1.00372, 1.53223, 1, -1.00372, 1.53223, -1, -1.00372, 1.82567, -1, 1.00372, 1.82567, 1, 1.00372, 1.82567, -1, -0.0743158, 1.73871, 1.15066, -0.0743158, 1.22014, 1.00178, -0.0743158, 1.22014, 1.15066, -0.0743158, 1.73871, 1.00178, 0.0743158, 1.22014, 1.00178, -0.0743158, 1.22014, 1.00178, 0.0743158, 1.73871, 1.00178, 0.0743158, 1.22014, 1.15066, 0.0743158, 1.22014, 1.00178, 0.0743158, 1.73871, 1.15066, -0.0743158, 1.22014, 1.15066, 0.0743158, 1.22014, 1.15066, 0.0743158, 1.22014, 1.00178, -0.0743158, 1.22014, 1.15066, -0.0743158, 1.22014, 1.00178, -0.0743158, 1.73871, 1.00178, 0.0743158, 1.73871, 1.15066, 0.0743158, 1.73871, 1.00178, 1.00779, -0.0121033, 1, -1.00779, -0.0121033, -1, 1.00779, -0.0121033, -1, 1.00779, 1.50462, 1, -0.89066, 1.50462, 0.801331, -1.00779, 1.50462, 1, 1.00779, 1.50462, -0.999999, 1.00779, -0.0121033, 1, 1.00779, -0.0121033, -1, 1.00779, 1.50462, 1, -1.00779, -0.0121033, 1, 1.00779, -0.0121033, 1, -1.00779, 1.50462, 1, -1.00779, -0.0121033, -1, -1.00779, -0.0121033, 1, 1.00779, -0.0121033, -1, -1.00779, 1.50462, -1, 1.00779, 1.50462, -0.999999, -0.89066, 1.50462, 0.801331, -0.890659, 0.208891, -0.801331, -0.890659, 1.50462, -0.801331, 0.89066, 1.50462, -0.801331, 0.890659, 1.50462, 0.801332, -0.890659, 1.50462, -0.801331, -1.00779, 1.50462, -1, 1.00779, 1.50462, -0.999999, -0.890659, 0.208891, -0.801331, 0.890659, 0.208891, 0.801332, 0.89066, 0.208891, -0.801331, -0.890659, 1.50462, -0.801331, 0.89066, 0.208891, -0.801331, 0.89066, 1.50462, -0.801331, 0.890659, 1.50462, 0.801332, -0.89066, 0.208891, 0.801331, -0.89066, 1.50462, 0.801331, 0.89066, 1.50462, -0.801331, 0.890659, 0.208891, 0.801332, 0.890659, 1.50462, 0.801332, -1.00372, 1.82567, -1, 1.00372, 1.82567, -1, 1.00372, 1.82567, 1, -1.00372, 1.82567, 1, 1.00372, 1.53223, 1, -1.00372, 1.82567, 1, -0.0743158, 1.73871, 1.00178, 0.0743158, 1.73871, 1.00178, 0.0743158, 1.73871, 1.15066, -0.0743158, 1.73871, 1.15066, 0.0743158, 1.22014, 1.15066, -0.0743158, 1.73871, 1.15066, -1.00779, -0.0121033, 1, 1.00779, 1.50462, 1, -1.00779, 1.50462, 1, -1.00779, 1.50462, -1, -1.00779, -0.0121033, -1, -0.89066, 0.208891, 0.801331, -0.89066, 0.208891, 0.801331, -0.890659, 0.208891, -0.801331, 0.890659, 0.208891, 0.801332, 0.89066, 0.208891, -0.801331 ), Vector3Array( -1, 0, 0, -1, 0, 0, -1, 0, 0, 0, 0, -1, 0, 0, -1, 0, 0, -1, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, 0, 0, -1, 0, 0, -1, 0, 0, -1, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, -1, 0, 0, -1, 0, 0, -1, 0, 0, 0, 0, -1, 0, 0, -1, 0, 0, -1, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, -1, 0, 0, -1, 0, 0, -1, -1, 0, 0, -1, 0, 0, -1, 0, 0, -1, 0, 0, 0, 0, -1, 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 1, 0, -1, 0, 0, 0, 0, -1, 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 1, 0, 0, -1, 0, 1, 0, 0, 0, 0, 1, -1, 0, 0, 0, 0, -1, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1, -1, 0, 0 ), null, null, Vector3Array( 0.919594, 0.363678, 0, 0.959252, 0.681839, 0, 0.959252, 0.363678, 0, 0.998909, 0.681839, 0, 0.959252, 0.364961, 0, 0.959252, 0.681839, 0, 0.920684, 0.681839, 0, 0.960342, 1, 0, 0.960342, 0.681839, 0, 0.960342, 0.683123, 0, 1, 1, 0, 1, 0.683123, 0, 0.539499, 0.681839, 0, 0.270295, 0.363678, 0, 0.270295, 0.681839, 0, 6.44433e-08, 0.363678, 0, 0.269204, 0.681839, 0, 0.269204, 0.363678, 0, 0.801672, 0.108725, 0, 0.821792, 0.0262308, 0, 0.801672, 0.0262308, 0, 0.409962, 0.0824942, 0, 0.429894, 0, 0, 0.409962, 0, 0, 0.821792, 0.108725, 0, 0.841913, 0.0262308, 0, 0.821792, 0.0262308, 0, 0.449826, 0, 0, 0.429894, 0.0824941, 0, 0.449826, 0.0824942, 0, 0.765502, 0.745047, 0, 0.74557, 0.721364, 0, 0.74557, 0.745047, 0, 0.74448, 0.376972, 0, 0.764412, 0.400655, 0, 0.764412, 0.376972, 0, 0.540589, 1, 0, 0.270295, 0.681839, 0, 0.270295, 1, 0, 0, 1, 0, 0.0268496, 0.700328, 0, 4.0277e-08, 0.681839, 0, 0.540589, 0.681839, 0, 0.74557, 1, 0, 0.74557, 0.681839, 0, 0.74448, 0.681839, 0, 0.539499, 0.363678, 0, 0.539499, 0.681839, 0, 0.204981, 0.363678, 0, 0, 0.0455164, 0, 0, 0.363678, 0, 0.204981, 0.0455164, 0, 0.409962, 0.363678, 0, 0.409962, 0.0455164, 0, 0.801672, 0.363678, 0, 0.976786, 0.108725, 0, 0.801672, 0.108725, 0, 0.243445, 0.981511, 0, 0.0268495, 0.981511, 0, 0.243445, 0.700328, 0, 0.270295, 0.681839, 0, 0.270295, 1, 0, 0.626558, 0.0824941, 0, 0.409962, 0.363677, 0, 0.626558, 0.363678, 0, 0.626558, 0.363678, 0, 0.801672, 0.0824941, 0, 0.626558, 0.0824941, 0, 0.74448, 0.681839, 0, 0.919594, 0.400655, 0, 0.74448, 0.400655, 0, 0.74557, 1, 0, 0.920684, 0.745047, 0, 0.74557, 0.745047, 0, 0.919594, 0.681839, 0, 0.99891, 0.364961, 0, 0.920684, 1, 0, 0.960342, 1, 0, 0.539499, 0.363678, 0, 0, 0.681839, 0, 0.821792, 0.108725, 0, 0.429894, 0.0824942, 0, 0.841913, 0.108725, 0, 0.429894, 0, 0, 0.765502, 0.721364, 0, 0.74448, 0.400655, 0, 0.540589, 0.681839, 0, 0.540589, 1, 0, 0.74448, 0.363678, 0, 0.204981, 0.0455164, 0, 0.204981, 0.363678, 0, 0.976786, 0.363678, 0, 0.409962, 0.0824941, 0, 0.801672, 0.363678, 0, 0.919594, 0.681839, 0, 0.920684, 1, 0 ), null, FloatArray( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), FloatArray( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 ), IntArray( 0, 2, 1, 3, 5, 4, 6, 8, 7, 9, 11, 10, 12, 14, 13, 15, 17, 16, 18, 20, 19, 21, 23, 22, 24, 26, 25, 27, 29, 28, 30, 32, 31, 33, 35, 34, 36, 38, 37, 39, 41, 40, 42, 44, 43, 45, 47, 46, 48, 50, 49, 51, 53, 52, 54, 56, 55, 39, 58, 57, 41, 60, 59, 60, 61, 57, 62, 64, 63, 65, 67, 66, 68, 70, 69, 71, 73, 72, 0, 1, 74, 3, 4, 75, 6, 7, 76, 9, 10, 77, 12, 13, 78, 15, 16, 79, 18, 19, 80, 21, 22, 81, 24, 25, 82, 27, 28, 83, 30, 31, 84, 33, 34, 85, 36, 37, 86, 39, 40, 58, 42, 43, 87, 45, 46, 88, 48, 49, 89, 51, 52, 90, 54, 55, 91, 39, 57, 61, 41, 59, 40, 60, 57, 59, 62, 63, 92, 65, 66, 93, 68, 69, 94, 71, 72, 95 ) ],
"material": SubResource( 1 ),
"morph_arrays": [  ],
"name": "chest",
"primitive": 4
}
custom_aabb/custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )

[sub_resource type="Animation" id=3]

resource/name = "closed-chest"
length = 0.0333333
loop = false
step = 0.1
tracks/0/type = "transform"
tracks/0/path = NodePath("Armature")
tracks/0/interp = 1
tracks/0/imported = true
tracks/0/keys = FloatArray( 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0.0333333, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1 )
tracks/1/type = "transform"
tracks/1/path = NodePath("Armature/Skeleton:Bone")
tracks/1/interp = 1
tracks/1/imported = true
tracks/1/keys = FloatArray( 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0.0333333, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1 )
tracks/2/type = "transform"
tracks/2/path = NodePath("Armature/Skeleton:Bone.001")
tracks/2/interp = 1
tracks/2/imported = true
tracks/2/keys = FloatArray( 0, 1, -3.63798e-12, 0, -3.99305e-08, 1.40281e-08, 7.36207e-10, -1.06105e-05, 1, 1, 1, 1, 0.0333333, 1, -3.63798e-12, 0, -3.99305e-08, 1.40281e-08, 7.36207e-10, -1.06105e-05, 1, 1, 1, 1 )

[sub_resource type="Animation" id=4]

resource/name = "default"
length = 0.816667
loop = false
step = 0.1
tracks/0/type = "transform"
tracks/0/path = NodePath("Armature/Skeleton:Bone")
tracks/0/interp = 1
tracks/0/imported = true
tracks/0/keys = FloatArray( 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1 )
tracks/1/type = "transform"
tracks/1/path = NodePath("Armature/Skeleton:Bone.001")
tracks/1/interp = 1
tracks/1/imported = true
tracks/1/keys = FloatArray( 0, 1, -3.63798e-12, 0, -3.99305e-08, 0, -1.76324e-38, -1.81899e-12, 1, 1, 1, 1 )

[sub_resource type="Animation" id=5]

resource/name = "open-chest"
length = 0.833333
loop = false
step = 0.1
tracks/0/type = "transform"
tracks/0/path = NodePath("Armature")
tracks/0/interp = 1
tracks/0/imported = true
tracks/0/keys = FloatArray( 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0.833333, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1 )
tracks/1/type = "transform"
tracks/1/path = NodePath("Armature/Skeleton:Bone")
tracks/1/interp = 1
tracks/1/imported = true
tracks/1/keys = FloatArray( 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0.0666667, 1, 0, 0.0115639, -0.0776594, 0.0419492, 0, 0, 0.99912, 1, 1, 1, 0.133333, 1, 0, 0.0274699, -0.255966, 0.099581, 0, 0, 0.995029, 1, 1, 1, 0.2, 1, 0, 0.0143074, -0.44843, 0.00881439, 0, 0, 0.999961, 1, 1, 1, 0.266667, 1, 0, -0.0284292, -0.674024, -0.284765, 0, 0, 0.958597, 1, 1, 1, 0.333333, 1, 0, -0.0398609, -0.723063, -0.363673, 0, 0, 0.931527, 1, 1, 1, 0.4, 1, 0, 0.0141218, -0.480141, -0.144529, 0, 0, 0.989501, 1, 1, 1, 0.466667, 1, 0, 0.0681045, -0.237219, 0.0822398, 0, 0, 0.996613, 1, 1, 1, 0.533333, 1, 0, 0.0497047, -0.231175, 0.0580145, 0, 0, 0.998316, 1, 1, 1, 0.6, 1, 0, -0.0144002, -0.247201, -0.0477104, 0, 0, 0.998861, 1, 1, 1, 0.666667, 1, 0, -0.035148, -0.247144, -0.0799274, 0, 0, 0.996801, 1, 1, 1, 0.8, 1, 0, -0.0284001, -0.0194049, 0.00807443, 0, 0, 0.999967, 1, 1, 1, 0.833333, 1, 0, -0.0282436, -0.0141218, 0.0101169, 0, 0, 0.999949, 1, 1, 1 )
tracks/2/type = "transform"
tracks/2/path = NodePath("Armature/Skeleton:Bone.001")
tracks/2/interp = 1
tracks/2/imported = true
tracks/2/keys = FloatArray( 0, 1, -3.63798e-12, 0, -3.99305e-08, 1.40281e-08, 7.36207e-10, -1.06105e-05, 1, 1, 1, 1, 0.133333, 1, -3.63798e-12, 0, -9.95351e-08, -7.45057e-09, 7.36435e-10, -1.06105e-05, 1, 1, 1, 1, 0.2, 1, 0, 1.19209e-07, -9.94187e-08, -0.227039, 2.40971e-06, -1.03332e-05, 0.973886, 1, 1, 1, 0.266667, 1, 3.63798e-12, 2.38419e-07, -2.18512e-07, 0.923272, -9.79665e-06, 4.07532e-06, -0.384148, 1, 1, 1, 0.333333, 1, -3.63798e-12, 0, -9.95351e-08, 0.985925, -1.04613e-05, 1.7732e-06, -0.167186, 1, 1, 1, 0.466667, 1, -3.63798e-12, 0, -1.5914e-07, 0.959445, -1.01804e-05, 2.99036e-06, -0.281897, 1, 1, 0.999999, 0.533333, 1, -3.63798e-12, -1.19209e-07, 1.95578e-08, 0.963562, -1.02241e-05, 2.83745e-06, -0.267486, 1, 1, 1, 0.666667, 1, -3.63798e-12, -1.19209e-07, 7.91624e-08, 0.990897, -1.0514e-05, 1.42768e-06, -0.134622, 1, 1, 1, 0.733333, 1, -3.63798e-12, -1.19209e-07, -9.96515e-08, 0.99818, -1.05912e-05, 6.39194e-07, -0.0603109, 1, 1, 1, 0.8, 1, -3.63798e-12, 0, -9.95351e-08, 0.999907, -1.06095e-05, 1.43956e-07, -0.0136367, 1, 1, 1, 0.833333, 1, -3.63798e-12, 0, 1.96742e-08, 0.999931, -1.06098e-05, 1.23969e-07, -0.011753, 1, 1, 1 )

[sub_resource type="BoxShape" id=6]

extents = Vector3( 1, 1, 1 )

[node name="chest_show_pic" type="Spatial"]

_import_path = NodePath(".")
process/pause_mode = 2
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 1 )
picture = null

[node name="Armature" type="Spatial" parent="."]

_import_path = NodePath("Armature")
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="Skeleton" type="Skeleton" parent="Armature"]

_import_path = NodePath("Armature/Skeleton")
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
bones/0/name = "Bone"
bones/0/parent = -1
bones/0/rest = Transform( 1, 0, 0, 0, 0, -1, 0, 1, 0, 0, 0, 0 )
bones/0/enabled = true
bones/0/bound_childs = [  ]
bones/1/name = "Bone.001"
bones/1/parent = 0
bones/1/rest = Transform( 1, -2.1221e-05, -1.47307e-09, 2.23815e-08, 0.00112408, -1, 2.1221e-05, 1, 0.0011241, 3.63798e-12, -0.998457, -1.53548 )
bones/1/enabled = true
bones/1/bound_childs = [  ]

[node name="Cube" type="MeshInstance" parent="Armature/Skeleton"]

_import_path = NodePath("Armature/Skeleton/Cube")
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = true
geometry/baked_light_tex_id = 0
mesh/mesh = SubResource( 2 )
mesh/skeleton = NodePath("..")
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

_import_path = NodePath("AnimationPlayer")
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/closed-chest = SubResource( 3 )
anims/default = SubResource( 4 )
anims/open-chest = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Area" type="Area" parent="."]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Area"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[node name="ShowPicture" parent="." instance=ExtResource( 3 )]

[connection signal="finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]

[connection signal="body_enter" from="Area" to="." method="_on_Area_body_enter"]


